<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="drawer_open">opened</string>
    <string name="drawer_close">close</string>
    <string name="app_name">BattBook</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">name</string>

    <string name="surname">surname</string>
    <string name="email">email</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="gender">gender</string>
    <string name="age">age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="Name">Name : </string>
    <string name="Surname">Surname : </string>
    <string name="Username">Username : </string>
    <string name="Gender">Gender : </string>
    <string name="Age">Age : </string>
    <string name="or">Or</string>
    <string name="save">Save Changes</string>
    <string name="profile">Personal Informations</string>
    <string name="change_credentials">Change Credentials</string>
    <string name="change_em_pass">Change your Email or Password</string>
    <string name="Email">Your Email : </string>
    <string name="Password_current">Your Password : </string>
    <string name="Password_new">New Password : </string>
    <string name="Password_retype">Retype Password : </string>
    <string name="Delete_contact">Delete Contact </string>
    <string name="Request_battery">Request Battery </string>
    <string name="map_pref">Map Preferences </string>
    <string name="klm_pref">Kilometer Distance of Users</string>
    <string name="change_km">Change the Kilometer Distance of Users in the Map</string>
    <string name="default_km">Default Kilometer Distance: 1km</string>
    <string name="new_km"> New Distance :</string>
    <string name="add_user">Add User</string>
    <string name="notifications"> Notifications</string>
    <string name="no_notifications">There are no notifications at the moment</string>
    <string name="change_charge_op">Change your charging options</string>
    <string name="charge_op">Changing options</string>
    <string name="c_charger">Usb Type C</string>
    <string name="otg_charger">Usb OTG</string>
    <string name="user_rating">User\'s Rating</string>
    <string name="rating">Rating : </string>
    <string name="accept">Accept</string>
    <string name="delete_req">Delete</string>
    <string name="my_sent_req">Sent friend requests </string>
    <string name="my_req"> Your Friend requests </string>
    <string name="my_contacts">Your Contacts </string>
    <string name="no_my_sent_req">There are no sent Friend requests </string>
    <string name="no_my_req"> There are no Friend requests </string>
    <string name="no_my_contacts">Your Contacts List is empty </string>
    <string name="rate_user">Rate this user</string>
    <string name="sent_friend">Friend Request has been sent</string>
    <string name="cancel_friend_req">Cancel Friend Request</string>
    <string name="my_rating">My Rating</string>
    <string name="send_req"> Add User</string>
    <string name="charger">Charger </string>

    <string name="chargin_options_gr">Τρόποι Φόρτισης</string>
    <string name="logout_gr">Αποσύνδεση</string>
    <string name="map_preferences_gr">Εμφάνιση Χάρτη</string>
    <string name="distance_klm_gr">Χιλιομετρική Απόσταση Χρηστών</string>
    <string name="change_cred_gr">Αλλαγή Στοιχείων Πρόσβασης</string>
    <string name="charger_gr"> Φορτιστής</string>
    <string name="powerbag_gr">Powerbag</string>
    <string name="c_charger_gr">C Charger</string>
    <string name="change_chargin_options_gr">Αλλαγή των Διαθέσιμων Τρόπων Φόρτισης</string>
    <string name="save_gr">Αποθήκευση Αλλαγών</string>
    <string name="my_sent_req_gr">Απεσταλμένα αιτήματα φιλίας</string>
    <string name="my_req_gr"> Αιτήματα φιλίας</string>
    <string name="my_contacts_gr">Οι επαφές σας </string>
    <string name="no_sent_req_gr">Δεν υπάρχουν απεσταλμένα αιτήματα φιλίας</string>
    <string name="no_req_gr">Δεν υπάρχουν νέα αιτήματα φιλίας</string>
    <string name="no_friends_gr">Η λίστα των επαφών σας είναι κενή</string>
    <string name="rate_user_gr">Βαθμολογήστε τον χρήστη</string>
    <string name="rating_gr">Βαθμολογία : </string>
    <string name="sent_friend_gr">Το αίτημα φιλίας έχει αποσταλεί</string>
    <string name="cancel_friend_req_gr">Ακύρωση Αιτήματος Φιλίας</string>
    <string name="send_req_gr"> ΠροσΘήκη στους φίλους</string>

</resources>
