<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rel_main1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true" 
        >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >
    
    <RelativeLayout
        android:id="@+id/rel_main"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >
        
    
    
    <EditText 
        android:id="@+id/et_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        />
    
        <EditText 
        android:id="@+id/et_pass"
        android:layout_below="@+id/et_mail"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        />
 
    </RelativeLayout>
    
           <View
        android:id="@+id/view"
        android:layout_below="@+id/rel_main"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:background="#a6a6a6"
        android:layout_height="1dp"/>

           <Button
               android:id="@+id/btn_login"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="16dp"
               android:background="#125688"
               android:paddingBottom="10dp"
               android:paddingLeft="40dp"
               android:paddingRight="40dp"
               android:paddingTop="10dp"
               android:text="@string/login"
               android:textColor="#FFFFFF" />

           <TextView
               android:id="@+id/tv_or"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_below="@+id/btn_login"
               android:layout_centerHorizontal="true"
               android:layout_marginTop="10dp"
               android:text="@string/or"
               android:textColor="#a6a6a6" />
           
              <Button
                  android:id="@+id/btn_register"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_alignLeft="@+id/btn_login"
                  android:layout_alignRight="@+id/btn_login"
                  android:layout_below="@+id/tv_or"
                  android:layout_marginTop="16dp"
                  android:background="#bb0000"
                  android:singleLine="true"
                  android:paddingBottom="10dp"
                  android:paddingLeft="30dp"
                  android:paddingRight="30dp"
                  android:paddingTop="10dp"
                  android:text="@string/register"
                  android:textColor="#FFFFFF" />
              
              </LinearLayout>
              
    </ScrollView>



</RelativeLayout>
